fixed mobile navbar spacing

--- a/src/common/navbar/styled.css
+++ b/src/common/navbar/styled.css
@@ -39,6 +39,7 @@
 
 .navbar-logo-text {
   @apply text-xl font-extrabold transition-all duration-300 text-white;
+  @apply hidden md:block;
 }
 
 .navbar-toggle {
